--- a/Estatística-Descritiva/exercicio_analise_descritiva.ipynb
+++ b/Estatística-Descritiva/exercicio_analise_descritiva.ipynb
@@ -91,7 +91,7 @@
         "id": "JFyBgeuzI1gi"
       },
       "source": [
-        "# import libraries here"
+        "# importe as bibliotecas aqui"
       ],
       "execution_count": null,
       "outputs": []
