--- a/Estatística-Descritiva/numpy.ipynb
+++ b/Estatística-Descritiva/numpy.ipynb
@@ -42,8 +42,6 @@
       "source": [
         "## Criando uma numpy array de uma lista\n",
         "\n",
-        "*   Item da lista\n",
-        "*   Item da lista\n",
         "\n"
       ]
     },
@@ -1279,7 +1277,7 @@
         "id": "6HQ1I2U569K_"
       },
       "source": [
-        "## Outros médotos"
+        "## Outros métodos"
       ]
     },
     {
