--- a/Correlação - Visualização/resolução_exercício_visualização.ipynb
+++ b/Correlação - Visualização/resolução_exercício_visualização.ipynb
@@ -35,7 +35,6 @@
       },
       "source": [
         "Variáveis usadas:\n",
-        "* Money\n",
         "* Height\n",
         "* Weight\n",
         "* Gender\n"
@@ -43,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2020-07-07T13:59:38.362862Z",
@@ -66,14 +65,14 @@
         "id": "1TkZPHRk6_Xb"
       },
       "source": [
-        "### Leia o dataset `weight-height-money.csv`.\n",
+        "### Leia o dataset `weight-height.csv`.\n",
         "\n",
         "Examine as primeiras linhas do dataset"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2020-07-07T13:59:38.416830Z",
@@ -260,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2020-07-07T13:59:38.457739Z",
@@ -525,7 +524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2020-07-07T13:59:43.124699Z",
@@ -594,7 +593,7 @@
           "height": 515
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -655,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2020-07-07T13:59:44.655285Z",
@@ -680,7 +679,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2020-07-07T13:59:44.689265Z",
@@ -900,7 +899,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2020-07-07T13:59:44.768220Z",
@@ -1165,7 +1164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2020-07-07T13:59:45.226957Z",
@@ -1219,7 +1218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2020-07-07T13:59:45.245944Z",
@@ -1248,7 +1247,7 @@
           "height": 394
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1326,7 +1325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2020-07-07T13:59:46.925739Z",
