--- a/Regressao_Linear_Simples/resolução_exercicio_RL_simples.ipynb
+++ b/Regressao_Linear_Simples/resolução_exercicio_RL_simples.ipynb
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "8N0sUod-HjpX"
       },
@@ -73,7 +73,7 @@
       "metadata": {
         "id": "oeV14DzEkHKR"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
           "height": 363
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -292,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "YVUMscbkHjpZ",
         "outputId": "1197437a-1f54-4e91-d9c9-4453ba7d4d89",
@@ -344,7 +344,7 @@
           "height": 390
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -388,7 +388,7 @@
         "# sua resposta aqui\n",
         "'''\n",
         "O gráfico acima apresenta uma tendência de relação negativa entre 'Idade' e 'Atrasos'. \n",
-        "O que significa que as pessoas com idade mais avançada são as que tendem a ser as mais atrasadas.'''"
+        "O que significa que as pessoas com idade mais avançada são as que tendem a ser menos atrasadas.'''"
       ]
     },
     {
@@ -429,7 +429,7 @@
           "height": 112
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -585,7 +585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "lcyi1AolHjpc"
       },
@@ -607,7 +607,7 @@
       "metadata": {
         "id": "2fW7fnzGlBWH"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -622,7 +622,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -644,7 +644,7 @@
       "metadata": {
         "id": "U16l_E-QlCAI"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -667,7 +667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "t_Zoe4V-Hjpc",
         "outputId": "0edb03bb-45fd-4f99-dcc9-848ee74b24b3",
@@ -722,7 +722,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "C8hAzneUHjpd",
         "outputId": "26470ac3-fdf5-47ec-a3f5-365bb69e6db9",
@@ -765,7 +765,7 @@
           "height": 55
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
